# axum-kit

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: demo.rs
src/: bootstrap.rs  config.rs  error.rs  general.rs  lib.rs  logger.rs  postgres.rs  redis.rs  validation.rs
src/middleware/: mod.rs  request_response_logger.rs  trace_body.rs
