[package]
name = "axum-kit"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Streamline the integration and usage of Axum with SQLx and Redis"
homepage = "https://github.com/4lkaid/axum-kit"
repository = "https://github.com/4lkaid/axum-kit"
readme = "README.md"
exclude = ["examples/*", ".github/*"]

[features]
default = []
postgres = ["dep:sqlx", "dep:iana-time-zone"]
redis = ["dep:redis"]

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = "0.4"
config = "0.14"
http-body-util = "0.1"
iana-time-zone = { version = "0.1", optional = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tower = "0.5"
