[package]
name = "axum-kit"
version = "0.6.3"
authors = ["4lkaid <4lkaid@gmail.com>"]
categories = ["web-programming::http-server", "database"]
keywords = ["axum", "sqlx", "redis"]
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Streamline the integration and usage of Axum with SQLx and Redis"
homepage = "https://github.com/4lkaid/axum-kit"
repository = "https://github.com/4lkaid/axum-kit"
readme = "README.md"
exclude = ["examples/*", ".github/*"]

[features]
default = []
postgres = ["dep:sqlx", "dep:iana-time-zone"]
redis = ["dep:redis", "dep:bb8"]

[dependencies]
anyhow = "1"
axum = "0.8"
bb8 = { version = "0.9", optional = true }
config = "0.15"
futures-util = "0.3"
http-body-util = "0.1"
iana-time-zone = { version = "0.1", optional = true }
redis = { version = "0.30", features = ["bb8", "tokio-comp"], optional = true }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
], optional = true }
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "compression-full",
    "cors",
    "request-id",
    "trace",
] }
tracing = "0.1"
tracing-appender = { package = "tracing-appender-plus", version = "0.2", features = [
    "local-time",
] }
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
